--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     color: #555;
     padding: 10px 25px;
     height: 60px;
-    border-radius: 30px;
+    border-radius: 50px;
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
@@ -114,13 +114,16 @@ margin-top: -6px;
 }
 
 
-@media  screen and (max-width:500px){
+@media  screen and (max-width:335px){
 
 .search input{
-    padding: 5px 12px;
+    padding: 5px 8px;
+    margin-right: 9px;
+    padding-right: 10px;
+
 }
 
 .search button {
-    border-radius: 50%;
+    border-radius: 20%;
 }
 }
