--- a/style.css
+++ b/style.css
@@ -112,3 +112,64 @@ margin-top: -6px;
     font-size: 14px;
     margin-top: 10px;
 }
+
+@media (max-width:400px){
+
+    .card{
+
+    width: 400px;
+    max-width: 4710px;
+    background: linear-gradient(135deg, #00feba, #5b548a);
+    color: #fff;
+    margin: 100px auto 0;
+    border-radius: 20px;
+    padding: 40px 30px;
+    text-align: center;
+    }
+
+    .search input{
+        border: 0;
+        outline: 0;
+        background: #ebfffc;
+        color: #555;
+        padding: 10px 25px;
+        height: 60px;
+        border-radius: 30px;
+        flex: 1;
+        margin-right: 16px;
+        font-size: 18px;
+    }
+
+    .search {
+
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .search button {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+    
+    }
+
+    .search button img{
+
+        width: 16px;
+    }
+
+}
+
+@media (max-width:360px){
+
+
+
+}
