--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ margin-top: -6px;
 
     .card{
 
-    width: 400px;
+    width: 390px;
     max-width: 4710px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
@@ -125,6 +125,7 @@ margin-top: -6px;
     border-radius: 20px;
     padding: 40px 30px;
     text-align: center;
+    object-fit: cover;
     }
 
     .search input{
@@ -134,7 +135,7 @@ margin-top: -6px;
         color: #555;
         padding: 10px 25px;
         height: 60px;
-        border-radius: 30px;
+        border-radius: 50px;
         flex: 1;
         margin-right: 16px;
         font-size: 18px;
@@ -142,7 +143,7 @@ margin-top: -6px;
 
     .search {
 
-        width: 50%;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -163,7 +164,8 @@ margin-top: -6px;
 
     .search button img{
 
-        width: 16px;
+        width: 18px;
+        
     }
 
 }
