--- a/style.css
+++ b/style.css
@@ -149,16 +149,13 @@ margin-top: -6px;
         justify-content: space-between;
     }
     .search button {
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 50px;
-    flex: 1;
-    margin-right: 12px;
-    font-size: 18px;
+        border: 0;
+        outline: 0;
+        background: #ebfffc;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        cursor: pointer;
     
     }
 
